[package]
name = "swim"
version = "0.1.0"
authors = ["ProtoByter <admin@protobyte.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "*"

[dependencies.sdl2]
version = "*"
default-features=false
features=["image","ttf"]